# What2Do

./: CMakeLists.txt  cli.cpp  cli.h  main.cpp  mainwindow.cpp  mainwindow.h  temp_to_do_model.cpp  temp_to_do_model.h  to_do.cpp  to_do.h  to_do_model.h
